RESOLVED FIXED218962
[WinCairo][GraphicsLayerTextureMapper] Support rounded rect clipping for backdrop-filter
https://bugs.webkit.org/show_bug.cgi?id=218962
Summary [WinCairo][GraphicsLayerTextureMapper] Support rounded rect clipping for back...
Fujii Hironori
Reported 2020-11-15 12:40:50 PST
[GraphicsLayerTextureMapper] Support rounded rect clipping for backdrop-filter r269772 (215445) added rounded rect clipping for backdrop-filter for TextureMapper and CoordinatedGraphics. Let's add the feature to GraphicsLayerTextureMapper. There are tests: css3/filters/backdrop/backdrop-filter-uneven-corner-radii.html css3/filters/backdrop/backdrop-filter-with-border-radius-value-change.html css3/filters/backdrop/backdrop-filter-with-border-radius
Attachments
Patch (1.89 KB, patch)
2020-11-15 12:44 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2020-11-15 12:44:50 PST
Fujii Hironori
Comment 2 2020-11-15 12:46:43 PST
(In reply to Fujii Hironori from comment #0) > r269772 (215445) added rounded rect clipping for backdrop-filter for Oops. It's not linked. Bug 215445 – [GTK][WPE] CSS backdrop overlay corners are not rounded on results.webkit.org This change also fixed the following bug for WinCairo port. Bug 218785 – [TextureMapper] blur backdrop-filter makes its box-shadow blurry
EWS
Comment 3 2020-11-16 00:27:31 PST
Committed r269838: <https://trac.webkit.org/changeset/269838> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414177 [details].
Radar WebKit Bug Importer
Comment 4 2020-11-16 00:28:19 PST
Note You need to log in before you can comment on or make changes to this bug.