[WinCairo][GraphicsLayerTextureMapper] Support rounded rect clipping for backdrop-filter https://bugs.webkit.org/show_bug.cgi?id=218962

Reviewed by Carlos Garcia Campos.

r269772 (Bug 215445) added rounded rect clipping support for
backdrop-filter for TextureMapper and CoordinatedGraphics. Add the
feature to GraphicsLayerTextureMapper.

Existing tests cover this change:
css3/filters/backdrop/backdrop-filter-uneven-corner-radii.html
css3/filters/backdrop/backdrop-filter-with-border-radius-value-change.html
css3/filters/backdrop/backdrop-filter-with-border-radius

* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::commitLayerChanges): Call setBackdropFiltersRect.


Canonical link: https://commits.webkit.org/231603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269838 268f45cc-cd09-0410-ab3c-d52691b4dbfc